Additional badges dark mode fixes (#224)
* Dark mode token spinning animation

* Fix border color

* Inline badges on profile page

* PR revision

--- a/apps/audius-client/packages/web/src/containers/artist-dashboard-page/Tiers.module.css
+++ b/apps/audius-client/packages/web/src/containers/artist-dashboard-page/Tiers.module.css
@@ -76,7 +76,7 @@
   min-height: 547px;
   padding: 40px 20px;
   border-radius: 16px;
-  border: 2px solid rgba(214, 213, 223, 0.5);
+  border: 2px solid var(--neutral-light-7);
   background-color: var(--neutral-light-10);
 }
 
